networkdir = $(pkgdatadir)/network

network_DATA = rftg.eval.0.2.net.gz rftg.role.0.2.net.gz \
               rftg.eval.0.2a.net.gz rftg.role.0.2a.net.gz \
               rftg.eval.0.3.net.gz rftg.role.0.3.net.gz \
               rftg.eval.0.4.net.gz rftg.role.0.4.net.gz \
               rftg.eval.1.2.net.gz rftg.role.1.2.net.gz \
               rftg.eval.1.2a.net.gz rftg.role.1.2a.net.gz \
               rftg.eval.1.3.net.gz rftg.role.1.3.net.gz \
               rftg.eval.1.4.net.gz rftg.role.1.4.net.gz \
               rftg.eval.1.5.net.gz rftg.role.1.5.net.gz \
               rftg.eval.2.2.net.gz rftg.role.2.2.net.gz \
               rftg.eval.2.2a.net.gz rftg.role.2.2a.net.gz \
               rftg.eval.2.3.net.gz rftg.role.2.3.net.gz \
               rftg.eval.2.4.net.gz rftg.role.2.4.net.gz \
               rftg.eval.2.5.net.gz rftg.role.2.5.net.gz \
               rftg.eval.2.6.net.gz rftg.role.2.6.net.gz \
               rftg.eval.3.2.net.gz rftg.role.3.2.net.gz \
               rftg.eval.3.2a.net.gz rftg.role.3.2a.net.gz \
               rftg.eval.3.3.net.gz rftg.role.3.3.net.gz \
               rftg.eval.3.4.net.gz rftg.role.3.4.net.gz \
               rftg.eval.3.5.net.gz rftg.role.3.5.net.gz \
               rftg.eval.3.6.net.gz rftg.role.3.6.net.gz \
               rftg.eval.4.2.net.gz rftg.role.4.2.net.gz \
               rftg.eval.4.2a.net.gz rftg.role.4.2a.net.gz \
               rftg.eval.4.3.net.gz rftg.role.4.3.net.gz \
               rftg.eval.4.4.net.gz rftg.role.4.4.net.gz \
               rftg.eval.4.5.net.gz rftg.role.4.5.net.gz \
               rftg.eval.5.2.net.gz rftg.role.5.2.net.gz \
               rftg.eval.5.2a.net.gz rftg.role.5.2a.net.gz \
               rftg.eval.5.3.net.gz rftg.role.5.3.net.gz \
               rftg.eval.5.4.net.gz rftg.role.5.4.net.gz \
               rftg.eval.5.5.net.gz rftg.role.5.5.net.gz \
               rftg.eval.6.2.net.gz rftg.role.6.2.net.gz \
               rftg.eval.6.2a.net.gz rftg.role.6.2a.net.gz \
               rftg.eval.6.3.net.gz rftg.role.6.3.net.gz \
               rftg.eval.6.4.net.gz rftg.role.6.4.net.gz \
               rftg.eval.6.5.net.gz rftg.role.6.5.net.gz

EXTRA_DIST = $(network_DATA)
